--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "author": "Anil Chary",
   "license": "ISC",
   "type": "module",
+  "engines": {
+    "node": "18.x"
+  },
   "scripts": {
     "dev": "vite",
     "build": "vite build",
